--- a/index.html
+++ b/index.html
@@ -162,13 +162,12 @@
             <div>
                 <h4 class="font-semibold">Réseaux Sociaux</h4>
                 <div class="mt-3 flex items-center gap-3">
-                    <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Facebook" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/facebook.png" alt="facebook" class="w-5 h-5"></a>
+                    <a href="https://www.facebook.com/mamadou.conde.126119" target="_blank" rel="noopener" aria-label="Facebook" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/facebook.png" alt="facebook" class="w-5 h-5"></a>
                     <a href="https://wa.me/224627369541" target="_blank" rel="noopener" aria-label="WhatsApp" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/whatsapp.png" alt="whatsapp" class="w-5 h-5"></a>
-                    <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Instagram" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/instagram.png" alt="instagram" class="w-5 h-5"></a>
-                    <a href="https://tiktok.com" target="_blank" rel="noopener" aria-label="TikTok" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/tik-tok.png" alt="tik-toc" class="w-5 h-5"></a>
-                    <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="YouTube" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/youtube.png" alt="youtube" class="w-5 h-5"></a>
+                    <a href="https://www.instagram.com/mamadouconde224/" target="_blank" rel="noopener" aria-label="Instagram" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/instagram.png" alt="instagram" class="w-5 h-5"></a>
+                    <a href="https://www.tiktok.com/@mamadouconde_" target="_blank" rel="noopener" aria-label="TikTok" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/tik-tok.png" alt="tik-toc" class="w-5 h-5"></a>
+                    <a href="https://www.youtube.com/@mamadouconde5931" target="_blank" rel="noopener" aria-label="YouTube" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/youtube.png" alt="youtube" class="w-5 h-5"></a>
                     <a href="https://gui-food-1.onrender.com" target="_blank" rel="noopener" aria-label="Site projet" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/globe.png" alt="globe" class="w-5 h-5"></a>
-                    <a href="https://telegram.org" target="_blank" rel="noopener" aria-label="Telegram" class="p-2 rounded-md ring-1 ring-slate-600 hover:ring-primary"><img src="img/telegram.png" alt="telegram" class="w-5 h-5"></a>
                 </div>
             </div>
         </div>
